hidden add section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </header>
     <main>
-      <section class="top-block section">
+      <section class="top-block section hidden">
         <div class="container top-container">
           <h1 class="h-one">Effective Solutions for Your Business</h1>
           <button class="hero-btn" type="button" data-modal-open>
@@ -60,7 +60,7 @@
         </div>
       </section>
 
-      <section class="description section">
+      <section class="description section hidden">
         <div class="container dscr-container">
           <h2 class="visually-hidden">Description of qualities</h2>
           <ul class="dscr-list">
@@ -116,7 +116,7 @@
         </div>
       </section>
 
-      <section class="sctn-team section">
+      <section class="sctn-team section hidden">
         <div class="container team-container">
           <h2 class="h-two">Our Team</h2>
           <ul class="team-list">
@@ -291,7 +291,7 @@
           </ul>
         </div>
       </section>
-      <section class="portfolio section">
+      <section class="portfolio section hidden">
         <div class="container portfolio-container">
           <h2 class="portfolio-two">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -415,7 +415,7 @@
         </div>
       </section>
     </main>
-    <footer class="ftr">
+    <footer class="ftr hidden">
       <div class="container ftr-div-flex">
         <div class="ftr-container">
           <a class="ftr-lg" href="./index.html"
@@ -482,7 +482,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop" data-modal>
+    <div class="backdrop hidden" data-modal>
       <div class="modal">
         <button class="modal-close" type="button" data-modal-close>
           <svg class="close-icon" width="8" height="8">
