--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="hdra">
       <div class="container header-container">
         <nav class="naviget">
-          <a class="hdra-lg" href="./index.html"
+          <a class="logo hdra-lg" href="./index.html"
             >Web<span class="text-lg">Studio</span></a
           >
           <ul class="naviget-list">
@@ -48,6 +48,75 @@
             </li>
           </ul>
         </address>
+        <button class="menu-button" type="button" data-menu-open>
+          <svg class="menu-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-heroicons-solid_menu"></use>
+          </svg>
+        </button>
+      </div>
+      <!-- menu -->
+      <div class="mobile-menu" data-menu>
+        <div class="container mobile-menu-containet"></div>
+        <button class="menu-modal-close" type="button" data-menu-close>
+          <svg class="menu-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <nav class="menu-naviget">
+          <ul class="menu-naviget-list">
+            <li>
+              <a class="menu-naviget-link current" href="./index.html"
+                >Studio</a
+              >
+            </li>
+            <li><a class="menu-naviget-link" href="">Portfolio</a></li>
+            <li><a class="menu-naviget-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="menu-addr-s">
+          <ul class="menu-addr-list">
+            <li>
+              <a class="menu-addr-s-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="menu-addr-s-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+        <ul class="menu-social-list">
+          <li class="menu-lishka-icon">
+            <a class="menu-href-social-icon" href=""
+              ><svg class="icon-svg" width="16" height="16">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="menu-lishka-icon">
+            <a class="href-social-icon" href="">
+              <svg class="icon-svg" width="16" height="16">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="menu-lishka-icon">
+            <a class="href-social-icon" href=""
+              ><svg class="icon-svg" width="16" height="16">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="menu-lishka-icon">
+            <a class="href-social-icon" href=""
+              ><svg class="icon-svg" width="16" height="16">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </header>
     <main>
