modified: css html one section

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       </div>
       <!-- menu -->
       <div class="mobile-menu" data-menu>
-        <div class="container mobile-menu-containet"></div>
-        <button class="menu-modal-close" type="button" data-menu-close>
+        <div class="container mobile-menu-containet">
+          <button class="menu-modal-close" type="button" data-menu-close>
           <svg class="menu-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
@@ -120,12 +120,13 @@
       </div>
     </header>
     <main>
-      <section class="top-block section hidden">
+      <section class="top-block section">
         <div class="container top-container">
           <h1 class="h-one">Effective Solutions for Your Business</h1>
           <button class="hero-btn" type="button" data-modal-open>
             Order Service
           </button>
+        </div>
         </div>
       </section>
 
