--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <ul class="menu-naviget-list">
             <li>
               <a class="menu-naviget-link current" href="./index.html"
-                >Studio</a
+                ><span class="menu-studio-span">Studio</span></a
               >
             </li>
             <li><a class="menu-naviget-link" href="">Portfolio</a></li>
@@ -77,42 +77,43 @@
         <address class="menu-addr-s">
           <ul class="menu-addr-list">
             <li>
+              <a class="menu-addr-s-link" href="tel:+110001111111"
+                ><span class="menu-studio-span">+11 (000) 111-11-11</span></a
+              >
+            </li>
+            <li>
               <a class="menu-addr-s-link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
-              <a class="menu-addr-s-link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
+            
           </ul>
         </address>
         <ul class="menu-social-list">
           <li class="menu-lishka-icon">
             <a class="menu-href-social-icon" href=""
-              ><svg class="icon-svg" width="16" height="16">
+              ><svg class="icon-svg" width="24" height="24">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="menu-lishka-icon">
-            <a class="href-social-icon" href="">
-              <svg class="icon-svg" width="16" height="16">
+            <a class="menu-href-social-icon" href="">
+              <svg class="icon-svg" width="24" height="24">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="menu-lishka-icon">
-            <a class="href-social-icon" href=""
-              ><svg class="icon-svg" width="16" height="16">
+            <a class="menu-href-social-icon" href=""
+              ><svg class="icon-svg" width="24" height="24">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="menu-lishka-icon">
-            <a class="href-social-icon" href=""
-              ><svg class="icon-svg" width="16" height="16">
+            <a class="menu-href-social-icon" href=""
+              ><svg class="icon-svg" width="24" height="24">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
             </a>
@@ -120,6 +121,7 @@
         </ul>
       </div>
     </header>
+
     <main>
       <section class="top-block section">
         <div class="container top-container">
