--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop hidden" data-modal>
+    <div class="backdrop" data-modal>
       <div class="modal">
         <button class="modal-close" type="button" data-modal-close>
           <svg class="close-icon" width="8" height="8">
