--- a/index.html
+++ b/index.html
@@ -618,14 +618,20 @@
               value="true"
             />
             <label for="user-privacy" class="checkbox-label">
-              <span class="checkbox-span">
-                <svg class="checkbox-icon" width="10" height="8">
-                  <use href="./images/icons.svg#icon-checkbox"></use>
-                </svg>
-              </span>
-              I accept the terms and conditions of the
-              <a href="" class="polyci-link">Privacy Policy</a></label
-            >
+              <div class="checkbox-conteiner">
+                <span class="checkbox-span">
+                  <svg class="checkbox-icon" width="10" height="8">
+                    <use href="./images/icons.svg#icon-checkbox"></use>
+                  </svg>
+                </span>
+  
+                <span class="checkbox-text">
+                  I accept the terms and conditions of the
+                  <a href="" class="polyci-link">Privacy Policy</a>
+                </span>
+              </div>
+            </label>
+            
           </div>
           <button class="form-btn" type="button">Send</button>
         </form>
