modified mobile modal checkbox span

--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
   
                 <span class="checkbox-text">
                   I accept the terms and conditions of the
-                  <a href="" class="polyci-link">Privacy Policy</a>
+                  <spaan class="check-span"><a href="" class="polyci-link">Privacy Policy</a></span>
                 </span>
               </div>
             </label>
