modified mobile two section

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </div>
       </section>
 
-      <section class="description section hidden">
+      <section class="description section">
         <div class="container dscr-container">
           <h2 class="visually-hidden">Description of qualities</h2>
           <ul class="dscr-list">
@@ -189,7 +189,7 @@
         </div>
       </section>
 
-      <section class="sctn-team section hidden">
+      <section class="sctn-team section">
         <div class="container team-container">
           <h2 class="h-two">Our Team</h2>
           <ul class="team-list">
