--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
           </ul>
         </div>
       </section>
-      <section class="portfolio section hidden">
+      <section class="portfolio section">
         <div class="container portfolio-container">
           <h2 class="portfolio-two">Our Portfolio</h2>
           <ul class="portfolio-list">
