add footer section mobile version

--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
         </div>
       </section>
     </main>
-    <footer class="ftr hidden">
+    <footer class="ftr">
       <div class="container ftr-div-flex">
         <div class="ftr-container">
           <a class="ftr-lg" href="./index.html"
