modified folder images

--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
           <h2 class="h-two">Our Team</h2>
           <ul class="team-list">
             <li class="item-card">
-              <img
-                src="./images/product-designer.jpg"
+              <img srcset="./images/team/team-1-min.jpg, ./images/team/team-1@2x-min.jpg"
+                src="./images/team/team-1-min.jpg"
                 alt="Product Designer"
                 width="264"
                 height="260"
@@ -236,8 +236,8 @@
               </div>
             </li>
             <li class="item-card">
-              <img
-                src="./images/frontend-developer.jpg"
+              <img srcset="./images/team/team-2-min.jpg, ./images/team/team-2@2x-min.jpg"
+                src="./images/team/team-2-min.jpg"
                 alt="Frontend Developer"
                 width="264"
                 height="260"
@@ -278,8 +278,8 @@
               </div>
             </li>
             <li class="item-card">
-              <img
-                src="./images/marketing.jpg"
+              <img srcset="./images/team/team-3-min.jpg, ./images/team/team-3@2x-min.jpg"
+                src="./images/team/team-3-min.jpg"
                 alt="Marketing"
                 width="264"
                 height="260"
@@ -320,8 +320,8 @@
               </div>
             </li>
             <li class="item-card">
-              <img
-                src="./images/ui-designer.jpg"
+              <img srcset="./images/team/team-4-min.jpg, ./images/team/team-4@2x-min.jpg"
+                src="./images/team/team-4-min.jpg"
                 alt="UI Designer"
                 width="264"
                 height="260"
