modified folder images

--- a/index.html
+++ b/index.html
@@ -373,8 +373,7 @@
                 <img
                   src="./images/banking-app.jpg"
                   alt="Banking App"
-                  width="360"
-                  height="300"
+                   width="100%"
                 />
 
                 <p class="overley">
@@ -393,8 +392,7 @@
                 <img
                   src="./images/pay-marketing.jpg"
                   alt="Cashless Payment"
-                  width="360"
-                  height="300"
+                   width="100%"
                 />
                 <p class="overley">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -412,8 +410,7 @@
                 <img
                   src="./images/meditation-app.jpg"
                   alt="Meditation App"
-                  width="360"
-                  height="300"
+                   width="100%"
                 />
                 <p class="overley">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -432,8 +429,7 @@
                 <img
                   src="./images/taxi-servis.jpg"
                   alt="Taxi Service"
-                  width="360"
-                  height="300"
+                   width="100%"
                 />
                 <p class="overley">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -451,8 +447,7 @@
                 <img
                   src="./images/screen-ilustration.jpg"
                   alt="Screen Illustrations"
-                  width="360"
-                  height="300"
+                   width="100%"
                 />
                 <p class="overley">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -470,8 +465,8 @@
                 <img
                   src="./images/online.jpg"
                   alt="Online Courses"
-                  width="360"
-                  height="300"
+                  width="100%"
+                  
                 />
                 <p class="overley">
                   14 Stylish and User-Friendly App Design Concepts · Task
