--- a/index.html
+++ b/index.html
@@ -592,13 +592,15 @@
                 required
               />
             </label>
-
-            <button class="subscribe-btn" type="submit">
-              Subscribe
-              <svg class="send-btn-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-send"></use>
-              </svg>
-            </button>
+              <div class="btn-cont">
+  
+              <button class="subscribe-btn" type="submit">
+                Subscribe
+                <svg class="send-btn-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+              </div>
           </form>
         </div>
       </div>
