--- a/index.html
+++ b/index.html
@@ -6,22 +6,15 @@
     <title>Home Work #6</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"/>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
-      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"/>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="./css/styles.css"/>
   </head>
   <body>
     <header class="hdra">
       <div class="container header-container">
         <nav class="naviget">
-          <a class="logo hdra-lg" href="./index.html"
-            >Web<span class="text-lg">Studio</span></a>
+          <a class="logo hdra-lg" href="./index.html">Web<span class="text-lg">Studio</span></a>
           <ul class="naviget-list">
             <li>
               <a class="naviget-link current" href="./index.html">Studio</a>
@@ -33,12 +26,10 @@
         <address class="addr-s">
           <ul class="addr-list">
             <li>
-              <a class="addr-s-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a>
+              <a class="addr-s-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-              <a class="addr-s-link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a>
+              <a class="addr-s-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
@@ -59,9 +50,9 @@
         <nav class="menu-naviget">
           <ul class="menu-naviget-list">
             <li>
-              <a class="menu-naviget-link current" href="./index.html"
-                ><span class="menu-studio-span">Studio</span></a
-              >
+              <a class="menu-naviget-link current" href="./index.html">
+                <span class="menu-studio-span">Studio</span>
+              </a>
             </li>
             <li><a class="menu-naviget-link" href="">Portfolio</a></li>
             <li><a class="menu-naviget-link" href="">Contacts</a></li>
@@ -70,9 +61,7 @@
         <address class="menu-addr-s">
           <ul class="menu-addr-list">
             <li>
-              <a class="menu-addr-s-link menu-studio-span" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
+              <a class="menu-addr-s-link menu-studio-span" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
             <li>
               <a class="menu-addr-s-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -179,12 +168,7 @@
           <h2 class="h-two">Our Team</h2>
           <ul class="team-list">
             <li class="item-card">
-              <img srcset="./images/team/team-1-min.jpg 1x, 
-                        ./images/team/team-1@2x-min.jpg 2x"
-                src="./images/team/team-1-min.jpg"
-                alt="Product Designer"
-                width="264"
-                height="260"/>
+              <img srcset="./images/team/team-1-min.jpg 1x, ./images/team/team-1@2x-min.jpg 2x" src="./images/team/team-1-min.jpg" alt="Product Designer" width="264" height="260"/>
               <div class="item-card-name">
                 <h3 class="h-three-team">Mark Guerrero</h3>
                 <p class="item-card-text">Product Designer</p>
