--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                 </span>
                 <span class="checkbox-text">
                   I accept the terms and conditions of the
-                <spaan class="check-span"><a href="" class="polyci-link">Privacy Policy</a></span>
+                <span class="check-span"><a href="" class="polyci-link">Privacy Policy</a></span>
               </div>
             </label>
           </div>
