fix bug validator

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                   <img
                     src="./images/banking-app.jpg"
                     alt="Banking App"
-                    width="360px"
+                    width="360"
                   />
                 </picture>
                 <p class="overley">
@@ -449,7 +449,7 @@
                   <img
                     src="./images/pay-marketing.jpg"
                     alt="Cashless Payment"
-                    width="360px"
+                    width="360"
                   />
                 </picture>
                 <p class="overley">
@@ -490,7 +490,7 @@
                   <img
                     src="./images/meditation-app.jpg"
                     alt="Meditation App"
-                    width="360px"
+                    width="360"
                   />
                 </picture>
                 <p class="overley">
@@ -531,7 +531,7 @@
                   <img
                     src="./images/taxi-servis.jpg"
                     alt="Taxi Service"
-                    width="360px"
+                    width="360"
                   />
                 </picture>
                 <p class="overley">
@@ -572,7 +572,7 @@
                   <img
                     src="./images/screen-ilustration.jpg"
                     alt="Screen Illustrations"
-                    width="360px"
+                    width="360"
                   />
                 </picture>
                 <p class="overley">
@@ -613,7 +613,7 @@
                   <img
                     src="./images/online.jpg"
                     alt="Online Courses"
-                    width="360px"
+                    width="360"
                   />
                 </picture>
                 <p class="overley">
